[package]
name = "ssl_network"
version = "0.1.0"
authors = ["Quentin Michel <quentinmichel69110@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = {version = "~2.27.0", features = ["yaml"]}
failure = "0.1.6"
shrust = "0.0.7"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }